add: tradeデータを受け取る関数の作成
